[FIX] refined overflow bug fix in as-player

--- a/src/css/as-player.css
+++ b/src/css/as-player.css
@@ -47,10 +47,10 @@
 }
 
 video {
-  width: 100%;
-  height: 100%;
-  top: 0%;
-  left: 0%;
+  width: 100vw;
+  height: 100svh;
+  top: -2%;
+  left: -2%;
   object-fit: cover;
   object-position: center;
   display: block;
